Strengthen prep: close audited gaps across DSA, Java, system design, strategy
Audited the full plan + notes across four dimensions and filled the real
holes (additive — no dates changed, plan still runs Jun 17 -> Sep 13).

New material:
- 08-modern-java.md: records, sealed types, switch/pattern matching, text
  blocks, virtual threads (+pinning), Jakarta/Spring Boot 3 migration —
  the biggest gap for a Boot 3 resume in 2026.

DSA gaps filled:
- Trie (208/211/1268), bit manipulation (136/191/338/268), Dijkstra &
  weighted graphs (743/787/1631 — also fixes a broken W6->W7 reference),
  deeper monotonic stack (496/503/901), design-DS (380/460).

System design gaps filled:
- LLD/OOD round prep (Parking Lot + SOLID; LC355 reframed as class design)
- News Feed HLD (was absent), Notification system, chat, typeahead-as-HLD
- CDN, SQL-vs-NoSQL framework, observability-as-design, estimation drill,
  bulkhead, encryption notes.

Behavioral/strategy:
- 4 missing STAR stories (mentorship, tough feedback, prioritization,
  customer impact) + strength/weakness + "why two companies"
- tiered target-company list (W5), first-screen salary deflection (W8),
  ATS keyword tailoring, Instahyre/Cutshort setup, GitHub checklist,
  in-hand vs CTC + numeric CTC-field guidance, realistic offer-timing coda.

Correctness fixes in modules 03/04/06/07 (treeify capacity>=64,
finalize timeline, ZGC, interface/Object, thread stack size) + HikariCP
and Boot3/Jakarta Q&A in interview-qa.md.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>